added heroku deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ cache:
     - node_modules
 env:
   - CI=true
+deploy:
+  provider: heroku
+  api_key:
+    secure: e429f8fe-6aee-45ae-9a61-1cc33a34771a
+  app: Trello-testing
+  on:
+    repo: Blubagoo/trello-testing
